--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,6 @@
 	url = https://github.com/foundry-rs/forge-std
 [submodule "foundry_fundme/lib/forge-std"]
 	path = foundry_fundme/lib/forge-std
+[submodule "Foundry-Smart-Contract-Lottery/lib/forge-std"]
+	path = Foundry-Smart-Contract-Lottery/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
