--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,9 @@
 [submodule "Foundry-Lottery-Contract/lib/chainlink-brownie-contracts"]
 	path = Foundry-Lottery-Contract/lib/chainlink-brownie-contracts
 	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
+[submodule "ERC20/lib/foundry-devops"]
+	path = ERC20/lib/foundry-devops
+	url = https://github.com/cyfrin/foundry-devops
+[submodule "ERC20/lib/forge-std"]
+	path = ERC20/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
